--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-streamlit
-scikit-learn
-pandas
-numpy
-matplotlib
 seaborn
+streamlit==1.25.0
+pandas==2.1.0
+numpy==1.26.4
+scikit-learn==1.3.2
+matplotlib==3.8.0
+python-magic==0.4.27
+pyyaml==6.0
+xlrd==2.0.1
+openpyxl==3.1.2
